<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="181dp"
        android:layout_height="86dp"
        android:layout_marginStart="24dp"
        android:text="@string/yes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="165dp"
        android:layout_height="86dp"
        android:layout_marginEnd="16dp"
        android:text="@string/no"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/showAnswer"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_answer"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesBtn"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/showResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_weight="10"

        android:text="@string/show_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showAnswer"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/replayQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replayQuiz"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showResult"
        app:layout_constraintTop_toBottomOf="@+id/showAnswer"
        app:layout_constraintVertical_bias="0.85" />"
        tools:layout_editor_absoluteX="294dp"
        tools:layout_editor_absoluteY="667dp" />

</android.support.constraint.ConstraintLayout>